Added support and demo for ADI_EVAL_SDP_CK1Z
git-svn-id: http://svn.osdn.net/svnroot/chibios/branches/stable_21.6.x@14598 27425a3e-05d8-49a3-a47f-9c15f0e5edd8

--- a/demos/STM32/RT-STM32F469I-EVAL-SDP-CK1Z/.cproject
+++ b/demos/STM32/RT-STM32F469I-EVAL-SDP-CK1Z/.cproject
@@ -48,8 +48,9 @@
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 	<storageModule moduleId="refreshScope" versionNumber="2">
 		<configuration configurationName="Default">
-			<resource resourceType="PROJECT" workspacePath="/RT-STM32F429-DISCOVERY"/>
+			<resource resourceType="PROJECT" workspacePath="/RT-STM32F469I-EVAL-SDP-CK1Z"/>
 		</configuration>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
