git-svn-id: http://svn.osdn.net/svnroot/chibios/branches/stable_21.6.x@14836 27425a3e-05d8-49a3-a47f-9c15f0e5edd8

--- a/demos/SPC5/NIL-SPC560D-EVB/Makefile
+++ b/demos/SPC5/NIL-SPC560D-EVB/Makefile
@@ -136,8 +136,8 @@ INCDIR = $(CHIBIOS)/os/license \
 MCU  = e200z0 -meabi -msdata=none -mregnames # Free GCC
 
 #TRGT = ppc-vle-
-#TRGT = powerpc-eabivle-
-TRGT = ppc-freevle-eabi-
+TRGT = powerpc-eabivle-
+#TRGT = ppc-freevle-eabi-
 CC   = $(TRGT)gcc
 CPPC = $(TRGT)g++
 # Enable loading with g++ only if you need C++ runtime support.
